# rquickjs-demo

./: Cargo.toml  README.md  demo.min.wasm  index.js  rust-toolchain.toml
crates/extension_rquickjs/: Cargo.toml
crates/extension_rquickjs/src/: lib.rs  module_builder.rs
crates/extension_rquickjs/src/loader/: mod.rs
src/: main.rs
